Improve fetch testing